--- a/Kitodo/src/main/webapp/pages/roleEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/roleEdit.xhtml
@@ -19,13 +19,13 @@
         xmlns:p="http://primefaces.org/ui">
     <f:metadata>
         <f:viewParam name="id"/>
-        <f:viewAction action="#{UserGroupForm.load(id)}"/>
+        <f:viewAction action="#{RoleForm.load(id)}"/>
     </f:metadata>
 
     <ui:param name="isEditMode"
-              value="#{UserGroupForm.userGroup.id ne null and SecurityAccessController.isAdminOrHasAuthorityToEditUserGroup(id)}"/>
+              value="#{RoleForm.role.id ne null and SecurityAccessController.isAdminOrHasAuthorityToEditRole(id)}"/>
     <ui:param name="isCreateMode"
-              value="#{UserGroupForm.userGroup.id eq null and SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('addUserGroup')}"/>
+              value="#{RoleForm.role.id eq null and SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('addRole')}"/>
     <ui:param name="isViewMode"
               value="#{not isEditMode and not isCreateMode}"/>
 
@@ -35,28 +35,28 @@
             window.onload = function () {checkForm('editForm')};
         </script>
         <h3 id="headerText">
-            <h:outputText value="#{msgs.userGroupEdit} (#{UserGroupForm.userGroup.title})"
+            <h:outputText value="#{msgs.roleEdit} (#{RoleForm.role.title})"
                           rendered="#{isEditMode}"/>
-            <h:outputText value="#{msgs.createNewUserGroup}" rendered="#{isCreateMode}"/>
-            <h:outputText value="#{msgs.userGroupView} (#{UserGroupForm.userGroup.title})"
+            <h:outputText value="#{msgs.createNewRole}" rendered="#{isCreateMode}"/>
+            <h:outputText value="#{msgs.roleView} (#{RoleForm.role.title})"
                           rendered="#{isViewMode}"/>
         </h3>
         <p:commandButton id="save"
                          widgetVar="save"
                          rendered="#{isEditMode || isCreateMode}"
                          value="#{msgs.save}"
-                         action="#{UserGroupForm.save}"
+                         action="#{RoleForm.save}"
                          icon="fa fa-floppy-o fa-lg"
                          iconPos="right"
                          onclick="setConfirmUnload(false);PF('notifications').renderMessage({
-                                        'summary':'#{msgs.userGroupSaving}',
+                                        'summary':'#{msgs.roleSaving}',
                                         'detail':'#{msgs.youWillBeRedirected}',
                                         'severity':'info'});"
 
                          update="notifications"
-                         disabled="#{UserGroupForm.saveDisabled}"/>
+                         disabled="#{RoleForm.saveDisabled}"/>
         <p:commandButton id="saveButtonToggler"
-                         actionListener="#{UserGroupForm.setSaveDisabled(false)}"
+                         actionListener="#{RoleForm.setSaveDisabled(false)}"
                          update="save"
                          style="display:none;"/>
         <p:button id="cancel"
@@ -69,9 +69,9 @@
     </ui:define>
 
     <ui:define name="pageTabView">
-        <p:tabView id="usergroupTabView">
-            <p:tab id="usergroupTab" title="#{msgs.details}">
-                <ui:include src="/WEB-INF/templates/includes/usergroupEdit/details.xhtml"/>
+        <p:tabView id="roleTabView">
+            <p:tab id="roleTab" title="#{msgs.details}">
+                <ui:include src="/WEB-INF/templates/includes/roleEdit/details.xhtml"/>
             </p:tab>
         </p:tabView>
     </ui:define>
@@ -82,13 +82,13 @@
         <li>
             <a href="">
                 <ui:fragment rendered="#{isEditMode}">
-                    #{msgs.userGroupEdit}
+                    #{msgs.roleEdit}
                 </ui:fragment>
                 <ui:fragment rendered="#{isCreateMode}">
-                    #{msgs.newUserGroup}
+                    #{msgs.newRole}
                 </ui:fragment>
                 <ui:fragment rendered="#{isViewMode}">
-                    #{msgs.userGroupView}
+                    #{msgs.roleView}
                 </ui:fragment>
             </a>
         </li>
