--- a/Kitodo/src/main/webapp/pages/taskEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskEdit.xhtml
@@ -57,14 +57,14 @@
             <p:tab title="#{msgs.details}">
                 <ui:include src="/WEB-INF/templates/includes/taskEdit/taskEditDetails.xhtml"/>
             </p:tab>
-            <p:tab title="#{msgs.userGroup}">
-                <ui:include src="/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml"/>
+            <p:tab title="#{msgs.role}">
+                <ui:include src="/WEB-INF/templates/includes/taskEdit/taskEditRoles.xhtml"/>
             </p:tab>
         </p:tabView>
     </ui:define>
 
     <ui:define name="dialog">
-        <ui:include src="/WEB-INF/templates/includes/taskEdit/taskEditUsergroupsPopup.xhtml"/>
+        <ui:include src="/WEB-INF/templates/includes/taskEdit/taskEditRolesPopup.xhtml"/>
     </ui:define>
 
     <ui:define name="breadcrumbs">
