--- a/Kitodo/src/main/webapp/pages/users.xhtml
+++ b/Kitodo/src/main/webapp/pages/users.xhtml
@@ -20,17 +20,17 @@
     <ui:define name="contentHeader">
         <h3>#{msgs.users}</h3>
         <h:form id="newElementForm"
-                rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('addUser, addRole')}">
+                rendered="#{SecurityAccessController.isAdminOrHasAnyAuthorityGlobalOrForClient('addUser, addRole, addClient, addLdapGroup, addLdapServer')}">
             <p:menuButton value="#{msgs.newElement}"
                           id="newElementButton"
                           icon="fa fa-plus-circle fa-lg"
                           iconPos="right"
                           styleClass="callto">
                 <p:menuitem value="#{msgs.newUser}" id="newUserButton"
-                            rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('addUser')}"
+                            rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('addUser')}"
                             action="#{UserForm.newUser}" icon="ui-icon-plusthick"/>
                 <p:menuitem value="#{msgs.newRole}" id="newRoleButton"
-                            rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('addRole')}"
+                            rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('addRole')}"
                             action="#{RoleForm.newRole}" icon="ui-icon-plusthick"/>
                 <p:menuitem value="#{msgs.newClient}" id="newClientButton" immediate="true"
                             rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('addClient')}"
@@ -49,15 +49,15 @@
         <p:tabView activeIndex="#{UserForm.activeTabIndex}" id="usersTabView">
             <p:ajax event="tabChange" listener="#{UserForm.onTabChange}"/>
             <p:tab title="#{msgs.users}"
-                   rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('viewAllUsers')}">
+                   rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('viewAllUsers')}">
                 <ui:include src="/WEB-INF/templates/includes/users/userList.xhtml"/>
             </p:tab>
             <p:tab title="#{msgs.roles}"
-                   rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('viewAllRoles')}">
+                   rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('viewAllRoles')}">
                 <ui:include src="/WEB-INF/templates/includes/users/roleList.xhtml"/>
             </p:tab>
             <p:tab id="clientsTab" title="#{msgs.clients}"
-                   rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('viewAllClients')}">
+                   rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('viewAllClients')}">
                 <ui:include src="/WEB-INF/templates/includes/users/clientList.xhtml" />
             </p:tab>
             <p:tab title="#{msgs.ldapGroups}"
