--- a/Kitodo/src/main/webapp/pages/clientEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/clientEdit.xhtml
@@ -21,9 +21,9 @@
     </f:metadata>
 
     <ui:param name="isEditMode"
-              value="#{ClientForm.client.id ne null and SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('editClient')}"/>
+              value="#{ClientForm.client.id ne null and SecurityAccessController.hasAuthorityGlobal('editClient')}"/>
     <ui:param name="isCreateMode"
-              value="#{ClientForm.client.id eq null and SecurityAccessController.isAdminOrHasAuthorityGlobal('addClient')}"/>
+              value="#{ClientForm.client.id eq null and SecurityAccessController.hasAuthorityGlobal('addClient')}"/>
     <ui:param name="isViewMode"
               value="#{not isEditMode and not isCreateMode}"/>
 
