--- a/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
@@ -23,9 +23,9 @@
     </f:metadata>
 
     <ui:param name="isEditMode"
-              value="#{LdapGroupForm.myLdapGruppe.id ne null and SecurityAccessController.isAdminOrHasAuthorityGlobal('editLdapGroup')}"/>
+              value="#{LdapGroupForm.myLdapGruppe.id ne null and SecurityAccessController.hasAuthorityGlobal('editLdapGroup')}"/>
     <ui:param name="isCreateMode"
-              value="#{LdapGroupForm.myLdapGruppe.id eq null and SecurityAccessController.isAdminOrHasAuthorityGlobal('addLdapGroup')}"/>
+              value="#{LdapGroupForm.myLdapGruppe.id eq null and SecurityAccessController.hasAuthorityGlobal('addLdapGroup')}"/>
     <ui:param name="isViewMode"
               value="#{not isEditMode and not isCreateMode}"/>
 
@@ -213,7 +213,7 @@
                                      value="#{msgs.delete}"
                                      onclick="return confirm('#{msgs.shouldItemBeRemoved}')"
                                      action="#{LdapGroupForm.delete}"
-                                     rendered="#{isEditMode and SecurityAccessController.isAdminOrHasAuthorityGlobal('deleteLdapGroup')}"
+                                     rendered="#{isEditMode and SecurityAccessController.hasAuthorityGlobal('deleteLdapGroup')}"
                                      icon="fa fa-trash-o fa-lg"
                                      iconPos="right"/>
                     <p:commandButton id="clear"
