--- a/Kitodo/src/main/webapp/pages/ldapserverEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapserverEdit.xhtml
@@ -21,9 +21,9 @@
     </f:metadata>
 
     <ui:param name="isEditMode"
-              value="#{LdapServerForm.ldapServer.id ne null and SecurityAccessController.isAdminOrHasAuthorityGlobal('editLdapServer')}"/>
+              value="#{LdapServerForm.ldapServer.id ne null and SecurityAccessController.hasAuthorityGlobal('editLdapServer')}"/>
     <ui:param name="isCreateMode"
-              value="#{LdapServerForm.ldapServer.id eq null and SecurityAccessController.isAdminOrHasAuthorityGlobal('addLdapServer')}"/>
+              value="#{LdapServerForm.ldapServer.id eq null and SecurityAccessController.hasAuthorityGlobal('addLdapServer')}"/>
     <ui:param name="isViewMode"
               value="#{not isEditMode and not isCreateMode}"/>
 
@@ -180,7 +180,7 @@
                                      value="#{msgs.delete}"
                                      onclick="return confirm('#{msgs.shouldItemBeRemoved}')"
                                     action="#{LdapServerForm.delete}"
-                                     rendered="#{isEditMode and SecurityAccessController.isAdminOrHasAuthorityGlobal('deleteLdapGroup')}"
+                                     rendered="#{isEditMode and SecurityAccessController.hasAuthorityGlobal('deleteLdapGroup')}"
                                      icon="fa fa-trash-o fa-lg"
                                      iconPos="right"/>
                     <p:commandButton id="clear"
