--- a/Kitodo/src/main/webapp/pages/roleEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/roleEdit.xhtml
@@ -23,9 +23,9 @@
     </f:metadata>
 
     <ui:param name="isEditMode"
-              value="#{RoleForm.role.id ne null and SecurityAccessController.isAdminOrHasAuthorityToEditRole(id)}"/>
+              value="#{RoleForm.role.id ne null and SecurityAccessController.hasAuthorityToEditRole(id)}"/>
     <ui:param name="isCreateMode"
-              value="#{RoleForm.role.id eq null and SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('addRole')}"/>
+              value="#{RoleForm.role.id eq null and SecurityAccessController.hasAuthorityGlobalOrForClient('addRole')}"/>
     <ui:param name="isViewMode"
               value="#{not isEditMode and not isCreateMode}"/>
 
