--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -23,9 +23,9 @@
     </f:metadata>
 
     <ui:param name="isEditMode"
-              value="#{UserForm.userObject.id ne null and SecurityAccessController.isAdminOrHasAuthorityToEditUser(id)}"/>
+              value="#{UserForm.userObject.id ne null and SecurityAccessController.hasAuthorityToEditUser(id)}"/>
     <ui:param name="isCreateMode"
-              value="#{UserForm.userObject.id eq null and SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('addUser')}"/>
+              value="#{UserForm.userObject.id eq null and SecurityAccessController.hasAuthorityGlobalOrForClient('addUser')}"/>
     <ui:param name="isViewMode"
               value="#{not isEditMode and not isCreateMode}"/>
 
