--- a/Kitodo/src/main/webapp/pages/desktop.xhtml
+++ b/Kitodo/src/main/webapp/pages/desktop.xhtml
@@ -59,7 +59,7 @@
                     <ui:include src="/WEB-INF/templates/includes/desktop/processesWidget.xhtml"/>
                 </p:panel>
                 <p:panel styleClass="desktop-widget"
-                         rendered="#{SecurityAccessController.hasAuthorityGlobalOrForClient('viewAllProjects, viewAllDockets')}">
+                         rendered="#{SecurityAccessController.hasAuthorityGlobalOrForClient('viewAllProjects')}">
                     <div class="content-header">
                         <div class="ui-panel-content ui-widget-content">
                             <h3>#{msgs.projects}</h3>
