--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -25,9 +25,9 @@
     <ui:param name="isEditMode"
               value="#{UserForm.userObject.id ne null and SecurityAccessController.hasAuthorityToEditUser()}"/>
     <ui:param name="isCreateMode"
-              value="#{UserForm.userObject.id eq null and SecurityAccessController.hasAuthorityGlobalOrForClient('addUser')}"/>
+              value="#{UserForm.userObject.id eq null and SecurityAccessController.hasAuthorityToAddUser()}"/>
     <ui:param name="isViewMode"
-              value="#{not isEditMode and not isCreateMode}"/>
+              value="#{not isEditMode and not isCreateMode and SecurityAccessController.hasAuthorityToViewUser()}"/>
 
     <ui:define name="contentHeader">
         <h:outputScript name="js/save.js" target="body" />
