Add error bundle to faces config

--- a/Kitodo/src/main/webapp/pages/error.xhtml
+++ b/Kitodo/src/main/webapp/pages/error.xhtml
@@ -36,7 +36,7 @@
                         <!-- Breadcrumb -->
                         <h:panelGrid id="id2" columns="1" styleClass="layoutInhaltKopf">
                             <h:panelGroup id="id3">
-                                <h:outputText id="id4" value="#{msgs.error}"/>
+                                <h:outputText id="id4" value="#{err.error}"/>
                             </h:panelGroup>
                         </h:panelGrid>
                         <!-- // Breadcrumb -->
@@ -44,7 +44,7 @@
                             <h:form id="myform" style="margin:3px">
                                 <!-- Überschrift -->
                                 <h3>
-                                    <h:outputText id="id5" value="#{msgs.errorOccurred}"/>
+                                    <h:outputText id="id5" value="#{err.errorOccurred}"/>
                                 </h3>
 
                                 <!-- TODO: refactor template to replace JAVA scriptlet -->
@@ -102,7 +102,7 @@
                                 <!--<%-->
                                 <!--} else {-->
                                 <!--%>-->
-                                <!--<h:outputText id="id6" value="#{msgs.error}"/>-->
+                                <!--<h:outputText id="id6" value="#{err.error}"/>-->
                                 <!--<%-->
                                 <!--}-->
                                 <!--%>-->
