--- a/Kitodo/src/main/webapp/pages/error.xhtml
+++ b/Kitodo/src/main/webapp/pages/error.xhtml
@@ -24,7 +24,7 @@
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:t="http://myfaces.apache.org/tomahawk"
     >
-    <f:view locale="#{SpracheForm.locale}">
+    <f:view locale="#{LanguageForm.locale}">
         <h:body>
             <table cellspacing="5" cellpadding="0" class="layoutTable" align="center">
 
