--- a/Kitodo/src/main/webapp/pages/massImport2.xhtml
+++ b/Kitodo/src/main/webapp/pages/massImport2.xhtml
@@ -92,7 +92,7 @@
 
                         <!--  Date  -->
                         <h:panelGroup id="propertyDate" rendered="#{(property.type.name == 'date')}">
-                            <p:calendar id="propertyCalendar" value="#{property.value}" locale="#{SpracheForm.locale}"
+                            <p:calendar id="propertyCalendar" value="#{property.value}" locale="#{LanguageForm.locale}"
                                         navigator="true" pattern="dd.MM.yyyy" />
                         </h:panelGroup>
                     </h:column>
