--- a/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
+++ b/Kitodo/src/main/webapp/pages/projectEditMetsPopup.xhtml
@@ -17,7 +17,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
-    <f:view locale="#{SpracheForm.locale}">
+    <f:view locale="#{LanguageForm.locale}">
         <h:body>
             <!-- edit dialog -->
             <p:dialog widgetVar="editFolderDialog"
