--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -63,97 +63,7 @@
     <ui:define name="pageTabView">
         <p:tabView id="userTabView">
             <p:tab id="detailsTab" title="#{msgs.details}">
-                <p:panelGrid id="useredit-grid" columns="2" layout="grid">
-                    <p:row>
-                        <div>
-                            <p:outputLabel for="surname" value="#{msgs.surname}"/>
-                            <p:inputText id="surname" class="input" disabled="#{isViewMode}"
-                                         placeholder="#{msgs.surname}" value="#{UserForm.userObject.surname}"
-                                         required="#{empty param['editForm:saveButtonToggler']}"/>
-                        </div>
-                        <div>
-                            <p:outputLabel for="firstName" value="#{msgs.firstName}"/>
-                            <p:inputText id="firstName" class="input" disabled="#{isViewMode}"
-                                         placeholder="#{msgs.firstName}" value="#{UserForm.userObject.name}"
-                                         required="#{empty param['editForm:saveButtonToggler']}"/>
-                        </div>
-                        <div>
-                            <p:outputLabel for="location" value="#{msgs.location}"/>
-                            <p:inputText id="location" class="input" disabled="#{isViewMode}"
-                                         placeholder="#{msgs.location}" value="#{UserForm.userObject.location}"
-                                         required="#{empty param['editForm:saveButtonToggler']}"/>
-                        </div>
-                        <div>
-                            <p:outputLabel for="ldapLogin" value="#{msgs.ldaplogin}"/>
-                            <p:inputText id="ldapLogin" class="input" disabled="#{isViewMode}"
-                                         placeholder="#{msgs.ldaplogin}" onchange="toggleSave()"
-                                         value="#{UserForm.userObject.ldapLogin}"/>
-                        </div>
-                        <div>
-                            <p:outputLabel for="ldapGroup" value="#{msgs.ldapGroup}"/>
-                            <p:selectOneMenu id="ldapGroup"  value="#{UserForm.userObject.ldapGroup}"
-                                             disabled="#{isViewMode}" converter="#{ldapGroupConverter}">
-                                <f:selectItems value="#{LdapGroupForm.ldapGroups}" var="ldapGroup"
-                                               itemValue="#{ldapGroup}" itemLabel="#{ldapGroup.title}"/>
-                                <p:ajax event="change" oncomplete="toggleSave()"/>
-                            </p:selectOneMenu>
-                        </div>
-                    </p:row>
-                    <p:row>
-                        <div>
-                            <p:outputLabel for="login" value="#{msgs.login}"/>
-                            <p:inputText id="login" class="input" disabled="#{isViewMode}" placeholder="#{msgs.login}"
-                                         value="#{UserForm.userObject.login}"
-                                         readonly="#{UserForm.userObject.id ne null}"
-                                         required="#{empty param['editForm:saveButtonToggler']}"/>
-                        </div>
-                        <div>
-                            <p:outputLabel for="password" value="#{msgs.password}" rendered="#{isCreateMode}"/>
-                            <p:password id="password" class="input" rendered="#{isCreateMode}"
-                                        placeholder="#{msgs.password}" value="#{UserForm.passwordToEncrypt}"
-                                        onchange="toggleSave()" required="#{empty param['editForm:saveButtonToggler']}"
-                                        redisplay="true"/>
-                        </div>
-                        <div>
-                            <p:outputLabel for="metaDataLanguage" value="#{msgs.metadataLanguage}"/>
-                            <p:inputText id="metaDataLanguage" class="input" disabled="#{isViewMode}"
-                                         placeholder="#{msgs.metadataLanguage}"
-                                         value="#{UserForm.userObject.metadataLanguage}"
-                                         onchange="toggleSave()"
-                                         required="#{empty param['editForm:saveButtonToggler']}"/>
-                        </div>
-                        <div>
-                            <p:outputLabel for="withMassDownload" value="#{msgs.massDownload}"/>
-                            <p:selectBooleanCheckbox id="withMassDownload" styleClass="input" disabled="#{isViewMode}"
-                                                     value="#{UserForm.userObject.withMassDownload}"
-                                                     onchange="toggleSave()"/>
-                        </div>
-                        <div>
-                            <p:outputLabel for="active" value="#{msgs.isActive}"/>
-                            <p:selectBooleanCheckbox id="active" styleClass="input" disabled="#{isViewMode}"
-                                                     value="#{UserForm.userObject.active}" onchange="toggleSave()"/>
-                        </div>
-                    </p:row>
-                </p:panelGrid>
-                <div>
-                    <p:commandButton id="writUserToLdapButton"
-                                     action="#{UserForm.writeUserAtLdapServer}"
-                                     value="#{msgs.ldapKonfigurationSchreiben}"
-                                     icon="fa fa-user-plus fa-lg"
-                                     immediate="true"
-                                     disabled="#{isViewMode}"
-                                     rendered="#{AuthenticationController.ldapAuthentication}"
-                                     class="button-filled-green">
-                    </p:commandButton>
-                    <p:commandButton onclick="PF('changePasswordDialog').show()"
-                                     id="changePasswordButton"
-                                     value="#{msgs.passwordChange}"
-                                     icon="fa fa-pencil fa-lg"
-                                     immediate="true"
-                                     rendered="#{isEditMode}"
-                                     class="button-filled-green">
-                    </p:commandButton>
-                </div>
+                <ui:include src="/WEB-INF/templates/includes/userEdit/details.xhtml"/>
             </p:tab>
             <!-- user groups -->
             <p:tab id="roleTab" title="#{msgs.roles}">
