--- a/Kitodo/src/main/webapp/pages/docketEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/docketEdit.xhtml
@@ -77,16 +77,7 @@
                             </p:selectOneMenu>
                         </div>
                     </p:row>
-                    <p:row rendered="#{SessionClientController.currentSessionClient eq null}">
-                        <div>
-                            <p:outputLabel for="client" value="#{msgs.client}"/>
-                            <p:selectOneMenu id="client" converter="#{clientConverter}" value="#{DocketForm.myDocket.client}">
-                                <f:selectItems value="#{DocketForm.clients}"/>
-                                <p:ajax event="change" oncomplete="toggleSave()"/>
-                            </p:selectOneMenu>
-                        </div>
-                    </p:row>
-                    <p:row rendered="#{SessionClientController.currentSessionClient ne null}" />
+                    <p:row />
                 </p:panelGrid>
             </p:tab>
         </p:tabView>
