Restore selenium test for create new process out of template

--- a/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
+++ b/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
@@ -23,7 +23,7 @@
     </f:metadata>
 
     <ui:define name="contentHeader">
-        <h3>
+        <h3 id="headerText">
             <h:outputText value="#{msgs.createNewProcess} (#{msgs.template}: '#{ProzesskopieForm.template.title}')"/>
         </h3>
         <p:commandButton id="save"
