Adjust function call

--- a/Kitodo/src/main/webapp/pages/workflowEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/workflowEdit.xhtml
@@ -49,7 +49,7 @@
                               'summary':'#{msgs.workflowSaving}',
                               'detail':'#{msgs.youWillBeRedirected}',
                               'severity':'info'});
-                              window['saveDiagramFunctionCall']();"
+                              saveDiagramFunctionCall();"
                          disabled="#{WorkflowForm.saveDisabled}"
                          immediate="true"/>
         <p:commandButton id="saveButtonToggler"
