Split change and reset password - add validation for old password

--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -124,5 +124,6 @@
         <ui:include src="/WEB-INF/templates/includes/userEdit/addProjectsPopup.xhtml"/>
         <ui:include src="/WEB-INF/templates/includes/userEdit/addClientsPopup.xhtml"/>
         <ui:include src="/WEB-INF/templates/includes/userEdit/changePasswordPopup.xhtml"/>
+        <ui:include src="/WEB-INF/templates/includes/userEdit/resetPasswordPopup.xhtml"/>
     </ui:define>
 </ui:composition>
